Fixed issue where @ small phone sizes, the COLLEGE container would stretch too far to the right

--- a/static/scss/_fontFormatting.scss
+++ b/static/scss/_fontFormatting.scss
@@ -1,3 +1,4 @@
 $content-size: 1.15em;
+$phone-content-size: 1em;
 $card-h2-size: 1.875em;
 $card-reg-size: 0.938em;
