--- a/static/scss/_general.scss
+++ b/static/scss/_general.scss
@@ -9,7 +9,7 @@
 }
 
 $breakpoints: (
-  phone: 640px,
+  phone: 411px,
   tablet: 768px,
   desktop: 1024px,
   fellowship-container-cutoff: 1240px,
