--- a/static/scss/home.scss
+++ b/static/scss/home.scss
@@ -12,6 +12,7 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  width: 100%;
 }
 
 .hero-image-welcome {
